2022-06-28  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/preproc/html/pre-html.cpp (do_file): Die if `fclose()`
	fails; such a situation suggests a pretty hosed environment.

2022-06-27  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/preproc/html/pre-html.cpp (checkImageDir): If `mkdir()`
	fails, use `strerror()` to report the underlying problem.

2022-06-27  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/preproc/html/pre-html.cpp: Refactor.  Drop unnecessary
	prototype for static function.  Use idiomatic C++98 null pointer
	constant.  Annotate it as null pointer to ease any future
	migration to ISO C++11.  Boolify.  Use C++98 bool data type
	instead of preprocessor macros `TRUE` and `FALSE`.  Demote some
	global Boolean variables from `int` to `bool` and rename some to
	be more clear: `show_progress` -> `want_progress_report`;
	`debugging`; `eqn_flag` -> `need_eqn`.
	(make_message): Rename this...
	(make_string): ...to this.  Align more closely with contemporary
	version of example from Linux man-pages printf(3) page.  Use
	`vsnprintf()` to determine size of memory buffer needed prior to
	allocation instead of iteratively growing it until it is large
	enough.  Always die if `vsnprintf()` fails: this function now
	always returns a valid pointer if it returns at all.
	(makeFileName, setupAntiAlias, imageList::createPage,
	imageList::createImage): Update call sites to use
	`make_string()`.
	(char_buffer::can_see): Demote return type from `int` to `bool`.
	(char_buffer::skip_spaces): Drop unused member function.
	(char_buffer::read_file, makeTempFiles): Demote return type from
	`int` to `void`.  Stop returning after calling functions that
	don't return.
	(char_buffer::read_file): Call `sys_fatal()` if `fread()`
	returns an error, similarly to other calls into the standard C
	library that this file makes.  Improve check for error from
	`fread()` by not regarding a return value of zero when the